Fixed Layout Issue

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -71,22 +71,32 @@
 .cards-container {
   margin: 0px auto;
   width: 100%;
-  max-width: 1500px;
+  max-width: 1360px;
   transition: max-width 0.5s ease 0s;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: stretch;
-  flex-wrap: wrap;
+  flex-wrap: wrap; */
+  -moz-column-count: 3;
+  -webkit-column-count: 3;
+  column-count: 3;
+  -moz-column-fill: balance-all;
+  -webkit-column-fill: balance-all;
+  column-fill: balance-all;
+  -webkit-column-gap: 0px;
+  -moz-column-gap: 0px;
+  column-gap: 0px;
 }
 
 .card {
   position: relative;
-  display: flex;
+  /* display: flex; */
+  display: inline-block;
   flex-direction: column;
   background: rgba(0, 0, 0, 0.04);
   border-radius: 5px;
   color: var(--white);
   width: 425px;
+  height: max-content;
   text-shadow: rgb(0 0 0 / 10%) 1px 1px 1px;
   font-size: 1.1rem;
   line-height: 1.5;
@@ -123,13 +133,31 @@
   border-bottom: 1px dotted #f2f2f2;
 }
 
-@media only screen and (max-width: 915px) {
+@media only screen and (max-width: 1380px) {
+  .cards-container{
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+    width: 100%;
+    max-width: 900px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .cards-container{
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+    column-count: 1;
+    width: 100%;
+    margin: auto;
+  }
   .card {
-    width: 94%;
+    width: 95%;
   }
 }
 
 @media only screen and (max-width: 600px) {
+  
   .content-heading-container {
     padding: 6rem 1rem 0;
   }
@@ -154,7 +182,7 @@
     width: 15rem;
   }
 
-  .no-results__content{
+  .no-results__content {
     font-size: 1.8rem;
   }
 
@@ -162,6 +190,6 @@
     padding: 2rem;
     margin: 0rem 0.7rem;
     margin-top: 2rem;
-    width: 94%;
+    /* width: 94%; */
   }
 }
